assets/css/stylesheet.css
* {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
    scroll-behavior: smooth;
    background-color: transparent;
}

:root {
    --light-tan: rgb(247, 236, 223);
    --dark-grey: rgb(63, 56, 56);
    --tan: tan;
    --black: black;
    --white: white;
    --light-blue: #7df9ff;
    --red: red;
    --planes-teal: invert(51%) sepia(47%) saturate(385%) hue-rotate(135deg) brightness(95%) contrast(87%);
    --offwhite-filter: invert(100%) sepia(44%) saturate(2325%) hue-rotate(180deg) brightness(106%) contrast(103%);
    --white-filter: invert(99%) sepia(28%) saturate(506%) hue-rotate(306deg) brightness(116%) contrast(100%);
    --black-filter: invert(0%) sepia(0%) saturate(7465%) hue-rotate(327deg) brightness(107%) contrast(107%);
    --dark-grey-filter: invert(19%) sepia(8%) saturate(554%) hue-rotate(314deg) brightness(92%) contrast(86%);
    --red-filter: invert(14%) sepia(96%) saturate(6262%) hue-rotate(1deg) brightness(114%) contrast(119%);
    --light-blue-filter: invert(85%) sepia(16%) saturate(1328%) hue-rotate(149deg) brightness(103%) contrast(103%);
    --navy-filter: invert(11%) sepia(75%) saturate(4455%) hue-rotate(240deg) brightness(72%) contrast(133%);
    --lavender-filter: invert(95%) sepia(9%) saturate(1694%) hue-rotate(184deg) brightness(100%) contrast(98%);
    --apple-grey-filter: invert(31%) sepia(17%) saturate(14%) hue-rotate(359deg) brightness(94%) contrast(83%);
    --instagram-violet-filter: invert(48%) sepia(64%) saturate(4278%) hue-rotate(274deg) brightness(88%) contrast(100%);
    --facebook-blue-filter: invert(37%) sepia(11%) saturate(3054%) hue-rotate(182deg) brightness(98%) contrast(84%);
    --linktree-green-filter: invert(85%) sepia(21%) saturate(384%) hue-rotate(89deg) brightness(93%) contrast(87%);
    --tiktok-teal-filter: invert(76%) sepia(14%) saturate(1136%) hue-rotate(135deg) brightness(93%) contrast(92%);
    --twitter-blue-filter: invert(65%) sepia(82%) saturate(4531%) hue-rotate(164deg) brightness(99%) contrast(101%);
    --spotify-green-filter: invert(56%) sepia(86%) saturate(396%) hue-rotate(89deg) brightness(86%) contrast(100%);
}

.opaque {
    opacity: 0.7;
}

.hidden {
    visibility: hidden;
}

.visible {
    visibility: visible;
}

/*______________________________ Body __________________________________*/

body {
    width: 100%;
    min-height: fit-content;
    height: auto;
    margin: 0;
    padding: 0;
    border: 0;
}

#background-image {
    min-width: 100%;
    min-height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    background: url('/assets/images/lance/lance-ocean-centered-1.jpg') no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    z-index: -100;
}

#background-image::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100vh;
    backdrop-filter: blur(6px);
    -webkit-backdrop-filter: blur(6px);
}

#loading-wrapper {
    z-index: 5;
    position: fixed;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-color: black;
}

.loaded-wrapper {
    visibility: hidden;
    opacity: 0;
    -webkit-transition: all 2s ease-out;
    transition: all 2s ease-out;
}

#loader {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
    width: 100%;
}

#loading-logo {
    height: 15vh;
    width: fit-content;
    filter: var(--white-filter);
    transition: filter 0.25s;
}

/*______________________________ Header __________________________________*/
#header{
    z-index: 5;
    position: fixed;
    width: 100%;
    color: var(--header-text-color);
    opacity: var(--opacity);
    background-color: var(--header-background-color);
}

.header-top {
    z-index: 5;
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    width: 100%;
    height: var(--header-height);
    border: 0;
    transition: all 0.25s;
}

.top {
    --header-background-color: transparent;
    --header-text-color: var(--black);
    --header-text-hover: var(--dark-grey);
    --header-logo-color: var(--black-filter);
    --header-logo-hover: var(--dark-grey-filter);
    --social-links-color: var(--black-filter);
    --tidal-filter: var(--offwhite-filter);
    --nav-button-width: 0.15rem;
    --nav-button-height: 100%;
    --opacity: 1;
}

.scrolled {
    --header-text-color: var(--black);
    --header-text-hover: var(--dark-grey);
    --header-logo-color: var(--black-filter);
    --header-logo-hover: var(--dark-grey-filter);
    --social-links-color: var(--dark-grey-filter);
    --tidal-filter: var(--offwhite-filter);
    --nav-button-width: 0.12rem;
    --nav-button-height: 80%;
    --opacity: 0.7;
}

.mobile {
    --nav-menu-link-padding: 0 2.25% 0.25% 2.25%;
    --nav-menu-font-size: 1.4vmax;
    --featured-header-size: 5vmax;
    --content-width: 80%;
    --album-image-width: 70%;
    --album-image-margin: 15%;
    --video-container-width: 80%;
}

.top-mobile {
    --header-height: 9.9vh;
    --header-logo-height: 9vh;
}

.scrolled-mobile {
    --header-height: 6.9vh;
    --header-logo-height: 6vh;
}

.desktop {
    --nav-menu-link-padding: 0% 5% 0.5% 5%;
    --nav-menu-font-size: 1vmax;
    --featured-header-size: 3vmax;
    --content-width: 80%;
    --album-image-width: 27.5%;
    --album-image-margin: 2.9166666667%;
    --video-container-width: 60%;
}

.top-desktop {
    --header-height: 12.9vh;
    --header-logo-height: 12vh;
    --header-background-color: transparent;
}

.scrolled-desktop {
    --header-height: 8.9vh;
    --header-logo-height: 8vh; 
}

.nav-open-scrolled {
    --header-background-color: white;
}
/* ... */

